--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,362 @@
-* {
-  box-sizing: border-box;
+:root {
+  --dark: #595E48;
+  --light: #D6D0D2;
+  --medium: #ACA8A2;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.5;
+.navigation {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: var(--dark);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 0;
+.navigation h1 {
+  color: var(--dark);
+  background-color: var(--light);
+  line-height: normal;
+  padding: 0px 10px 0px 5%;
+  margin: 10px 0px;
+}
+.navigation nav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 35%;
+  align-items: center;
+  justify-content: flex-end;
+  gap: 10px;
+  margin: 0px 5% 0px 0px;
 }
 
-p {
-  margin: 0;
+nav a {
+  color: var(--light);
+  text-decoration: none;
+  padding: 0px 0.5rem;
+  border-bottom: solid 3px;
 }
+
+.heroBanner {  
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: center;  
+  height: 350px;
+  width: 100%;
+  padding: 0px 5%;
+  background-image: url("../images/pretty-twig-white.png");
+  background-size: cover;
+  background-position: center;
+}
+
+#myPhoto {
+  width: 200px;
+  height: 200px;
+  background-image: url("../images/IMG_20221113_120232088_HDR.jpg");
+  background-size: cover;
+  background-position: center;
+  border: 4px solid var(--dark);
+  border-radius: 50%;
+  margin: 0px;
+}
+
+#subtitle {
+  padding: 3px 10px;
+  margin: 20px 0px 0px;
+  color: var(--light);
+  background-color: var(--dark);
+}
+
+.pageWrapper {
+  margin: 30px 5% 0px 10%;
+}
+
+.pageSection {
+  display: flex;
+  flex-direction: row;  
+  gap: 30px;
+  margin-bottom: 50px;
+}
+
+.pageSection h2 {
+  width: 150px;
+  flex: 0 0 auto;
+  font-size: 2rem;
+  text-align: right;
+  line-height: normal;
+  color: var(--dark);
+  padding: 0px 15px 0px 0px;
+  border-right: solid 4px;
+}
+
+.aboutText {
+  font-size: 18px;
+  color: var(--dark);
+}
+
+.workGrid {
+  width: 100%;
+  display: grid;
+  gap: 20px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 600px 200px 200px;
+  grid-template-areas: 
+    "firstWork firstWork"
+    "secondWork thirdWork"
+    "fourthWork fifthWork";
+}
+
+#firstWork {
+  grid-area: firstWork;
+  background-image: url("../images/young-plant-isolated-white.jpg");
+}
+
+#secondWork {
+  grid-area: secondWork;
+  background-image: url("../images/selective-focus-shot-rocks-covered-with-moss-river.png");
+}
+
+#thirdWork {
+  grid-area: thirdWork;
+  background-image: url("../images/view-landscape-during-sunset.png");
+}
+
+#fourthWork {
+  grid-area: fourthWork;
+  background-image: url("../images/beautiful-landscape-mother-nature.png");
+}
+
+#fifthWork {
+  grid-area: fifthWork;
+  background-image: url("../images/beautiful-landscape-mother-nature1.png");
+}
+
+.workArea {
+  position: relative;
+  border: 6px solid var(--medium);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  filter: opacity(75%);
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+}
+
+.workArea:hover {
+  filter: opacity(100%);  
+}
+
+.bgImg {
+  display: block;
+  width: 100%;
+  height: 100%;
+  text-decoration: none;  
+}
+
+.workArea .headline {
+  position: absolute;
+  bottom: 15px;
+  color: var(--dark);
+  background-color: var(--medium);
+  width: fit-content;
+  padding: 2px 10px 2px 0px;  
+}
+
+/*another possible filter*/
+/* .workArea::after {
+  content:"";
+  position:absolute;
+  left:0;
+  top:0;
+  width:100%;
+  height:100%;
+  background-color: rgb(172,168,162,0.5);
+  background-size:cover;
+  z-index: -1;
+  filter: brightness(20%) grayscale(1);
+  transition-duration: 0.3s;
+  transition-timing-function: ease;
+} */
+
+.contactData {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 100%;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  margin: 0px;
+}
+
+.contactData a {
+  color: var(--dark);
+  font-size: 18px;
+  font-weight: bold;
+  text-decoration: none;
+  padding: 0px 0.5rem;
+  border-bottom: solid 3px;
+}
+
+.disabledLink {
+  pointer-events: none;
+}
+
+@media screen and (max-width: 576px) {
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navigation h1 {
+    font-size: 3rem;
+    text-align: center;
+    width: 100%;
+    padding: 3px;
+    margin: auto;
+  }
+  .navigation nav {
+    font-size: 1.3rem;
+    width: 100%;
+    justify-content: center;
+    gap: 15px;
+    margin: 15px 0px 10px 0px;
+  }
+  nav a {
+    border-bottom: solid 4px;
+  }
+  .heroBanner {  
+    align-items: center;
+    justify-content: flex-end;  
+    height: 280px;    
+  }
+  #myPhoto {
+    width: 150px;
+    height: 150px;    
+  }
+  #subtitle {
+    font-size: 1.5rem;
+    padding: 0px 10px;
+    margin: 20px 0px 10px 0px;
+  }
+  .pageWrapper {
+    margin: 30px 5% 0px 5%;
+  }
+  .pageSection {
+    flex-direction: column;    
+  }
+  .pageSection h2 {
+    font-size: 2.5rem;
+    width: 100%;
+    text-align: left;
+    padding: 0px 0px 15px 0px;
+    border-right: none;
+    border-bottom: solid 4px;
+  }
+  .workGrid {    
+    grid-template-columns: 1fr; 
+    grid-template-rows: repeat(5, 150px); 
+    grid-template-areas: 
+    'firstWork'
+    'secondWork'
+    'thirdWork'
+    'fourthWork'
+    'fifthWork';
+  }
+  .workGrid .headline h3 {
+    font-size: 1.5rem;
+    padding: 2px 10px 2px 0px;
+  }
+  .workGrid .headline p {
+    font-size: 0.8rem;
+    padding-bottom: 2px;
+  }
+  .contactData {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .contactData a {
+    font-size: 1.3rem;
+    border-bottom: solid 4px;
+  }
+}
+
+@media screen and (max-width: 992px) and (min-width: 577px) {
+  .navigation {
+    flex-direction: column;
+    align-items: center;
+  }
+  .navigation h1 {
+    font-size: 5rem;
+    text-align: center;
+    width: 100%;
+    padding: 3px;
+    margin: auto;
+  }
+  .navigation nav {
+    font-size: 1.3rem;
+    width: 100%;
+    justify-content: center;
+    gap: 15px;
+    margin: 15px 0px 10px 0px;
+  }
+  nav a {
+    border-bottom: solid 4px;
+  }
+  .heroBanner {  
+    align-items: flex-end;
+    justify-content: flex-end;  
+    height: 280px;
+    width: 100%;
+  }
+  #myPhoto {
+    width: 180px;
+    height: 180px;
+  }
+  #subtitle {
+    font-size: 1.5rem;
+    padding: 0px 10px;
+    margin: 20px 0px 10px 0px;
+  }
+  .pageWrapper {
+    margin: 30px 5% 0px 5%;
+  }
+  .pageSection {
+    flex-direction: column;  
+    gap: 30px;
+    margin-bottom: 50px;
+  }
+  .pageSection h2 {
+    font-size: 3.5rem;
+    width: 100%;
+    text-align: left;
+    padding: 0px 0px 15px 0px;
+    border-right: none;
+    border-bottom: solid 4px;
+  }
+  .workGrid {
+    grid-template-columns: 1fr 1fr; 
+    grid-template-rows: 400px 150px 150px; 
+    grid-template-areas: 
+    'firstWork firstWork'
+    'secondWork thirdWork'
+    'fourthWork fifthWork';
+  }
+  .workGrid .headline h3 {
+    font-size: 1.5rem;
+    padding: 2px 0px;
+  }
+  .workGrid .headline p {
+    font-size: 0.8rem;
+    padding-bottom: 2px;
+  }
+  .contactData {
+    flex-wrap: wrap;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+  }
+  .contactData a {
+    border-bottom: solid 4px;
+  }
+}
+
